Fix text align username

--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -187,6 +187,7 @@
 }
 .chart .MuiPaper-root {
     padding: 25px;
+    width:  100%;
 }
 
 .gridStyle {
