--- a/src/modules/Analytics/ActiveScore/analytics.css
+++ b/src/modules/Analytics/ActiveScore/analytics.css
@@ -199,6 +199,7 @@
 
 .userProgress {
     margin-top: 20px;
+    text-align: left;
 }
 
 .ant-progress-inner {
